[package]
name = "depth_anything"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn", branch = "main", features = ["vision", "wgpu", "ndarray", "tch", "vulkan"] }
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-ndarray = { git = "https://github.com/tracel-ai/burn", branch = "main" }
burn-store = { git = "https://github.com/tracel-ai/burn", branch = "main" }

[build-dependencies]
burn-import = { git = "https://github.com/tracel-ai/burn", branch = "main" }
